--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "encoding": "^0.1.13",
     "firebase": "^10.4.0",
+    "firebase-admin": "^11.11.0",
     "next": "latest",
+    "plaid": "^16.0.0",
     "react": "latest",
     "react-dom": "latest",
     "react-firebase-hooks": "^5.1.1",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-plaid-link": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "latest",
